<resources>
    <string name="app_name">TestGitDemo</string>
    <string name="user_list">用户列表</string>
    <string name="user_name">用户名</string>
    <string name="test_string">test_string</string>
    <string name="testIdCard">测试身份证识别</string>
    <string name="testIdCardResult">识别结果</string>
    <string name="testGet">测试get</string>
    <string name="testPost">测试post</string>
    <string name="trans_text">请输入要翻译的文本</string>
</resources>
